--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <body>
       <header>
           <nav>
-              <a href="assignment.html"><sup>A Sample Taste</sup></a>
+              <a href="index.html"><sup>A Sample Taste</sup></a>
 
               <a href="videos.html"><sub>Down the Rabbit Hole</sub></a>
 
