--- a/everyday.html
+++ b/everyday.html
@@ -7,7 +7,7 @@
   <body>
       <header>
           <nav>
-              <a href="assignment.html"><sub>A Sample Taste</sub></a>
+              <a href="index.html"><sub>A Sample Taste</sub></a>
 
               <a href="videos.html"><sub>Down the Rabbit Hole</sub></a>
 
