--- a/videos.html
+++ b/videos.html
@@ -21,7 +21,7 @@
   <body>
       <header>
           <nav>
-              <a href="assignment.html"><sub>A Sample Taste</sub></a>
+              <a href="index.html"><sub>A Sample Taste</sub></a>
 
               <a href="videos.html"><sup>Down the Rabbit Hole</sup></a>
 
