--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <audio
         src="images/AlinaM.mp3"
         autoplay
-        controls
+        loop
         >
         Your browser doesnt support mp3
       </audio>
