--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           </nav>
       </header>
       <audio
-        src="02 Images/AlinaM.mp3"
+        src="C:\Users\break\Desktop\Class Files\Code 2\02 Images\AlinaM.mp3"
         autoplay
         loop
         >
@@ -55,7 +55,7 @@
 
           <p>
             <img
-            src="02 Images/desktop.png"
+            src="C:\Users\break\Desktop\Class Files\Code 2\desktop.png"
             width="520"
             height="400"
             />
