--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
           <p>
             <img
-            src="C:\Users\break\Desktop\Class Files\Code 2\desktop.png"
+            src="02 Images\desktop.png"
             width="520"
             height="400"
             />
