--- a/index.html
+++ b/index.html
@@ -56,9 +56,10 @@
           <p>
             <img
             src="desktop.png"
+            alt="nope"     
             width="520"
             height="400"
-            />
+            >
           </p>
           <p>
             !!Gotta love the Spotify and Netflix!!
@@ -69,9 +70,10 @@
           </p>
 
           <p>
-            <img align="right"
+            <img
             src="cat.gif"
-            />
+                 align="right"
+            >
           </p>
 
       </section>
