--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
         footer {
           position: fixed;
           bottom: 0;
-        }
+
+     }
         audio {
           position: relative;
         }
@@ -72,6 +73,7 @@
           <p>
             <img
             src="cat.gif"
+                 alt="meaw"
                  align="right"
             >
           </p>
