--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>  
     <style>
@@ -26,8 +26,7 @@
         footer {
           position: fixed;
           bottom: 0;
-
-     }
+        }
         audio {
           position: relative;
         }
@@ -46,21 +45,20 @@
       </header>
       <audio
         src="C:\Users\break\Desktop\Class Files\Code 2\02 Images\AlinaM.mp3"
-        autoplay
-        loop
+        controls
+
         >
-        Your browser doesnt support mp3
+        Your browser doesn't support mp3
       </audio>
       <section>
         <h1>Web Browsing on the Daily</h1>
 
           <p>
             <img
-            src="desktop.png"
-            alt="nope"     
+            src="02 Images/desktop.png"
             width="520"
             height="400"
-            >
+            />
           </p>
           <p>
             !!Gotta love the Spotify and Netflix!!
@@ -71,11 +69,9 @@
           </p>
 
           <p>
-            <img
+            <img align="right"
             src="cat.gif"
-                 alt="meaw"
-                 align="right"
-            >
+            />
           </p>
 
       </section>
