--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
           <p>
             <img
-            src="02 Images/desktop.png"
+            src="desktop.png"
             width="520"
             height="400"
             />
