--- a/index.html
+++ b/index.html
@@ -62,16 +62,13 @@
           </p>
           <p>
             !!Gotta love the Spotify and Netflix!!
-          </p>
-          <p
-            align="right">
-            Meow
-          </p>
-
-          <p>
-            <img align="right"
-            src="cat.gif"
-            />
+            <iframe 
+             width="560" 
+             height="315"
+             src="https://www.youtube.com/embed/FeL4b80kc6A?rel=0" 
+             frameborder="0" 
+             autoplay
+             allowfullscreen></iframe>
           </p>
 
       </section>
