--- a/index.html
+++ b/index.html
@@ -62,13 +62,15 @@
           </p>
           <p>
             !!Gotta love the Spotify and Netflix!!
-            <iframe 
-             width="560" 
-             height="315"
-             src="https://www.youtube.com/embed/FeL4b80kc6A?rel=0" 
-             frameborder="0" 
-             autoplay
-             allowfullscreen></iframe>
+              <iframe 
+               width="560" 
+              height="315"
+              align="right"
+              src="https://www.youtube.com/embed/FeL4b80kc6A?rel=0" 
+              frameborder="0" 
+              autoplay
+              allowfullscreen>
+              </iframe>
           </p>
 
       </section>
