--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
       </audio>
       <section>
         <h1>Web Browsing on the Daily</h1>
-
+      
           <p>
+            I don't or try not to do too much on the computer these days so I can actually get work done, but here is what it looks like.
             <img
             src="desktop.png"
             width="520"
@@ -63,6 +64,7 @@
           </p>
           <p>
             !!Gotta love the Spotify and Netflix!!
+            
           </p>
           <p>
               <iframe 
