--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
           background-size: auto;
 
           background-repeat: no-repeat;
+
           background-position: center;
           background-color: #000000
 
@@ -55,7 +56,8 @@
         <h1>Web Browsing on the Daily</h1>
       
           <p>
-            I don't or try not to do too much on the computer these days so I can actually get work done, but here is what it looks like.
+            I don't or try not to do too much on the computer these days 
+            so I can actually get work done, but here is what it looks like.
             <img
             src="desktop.png"
             width="520"
