--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
             color: white
       }
       </style>
-    </a>
-    <meta charset="utf-8">
+    </a>    <meta charset="utf-8">
     <title>A Day in the life of..</title>
     <style>
         header {
@@ -18,7 +17,6 @@
             url(https://img01.deviantart.net/eed1/i/2017/044/6/b/starman_by_revenge_leader1-daz0b5i.jpg);
           background-color: rgb(94, 28, 13);
           background-size: auto;
-
           background-repeat: no-repeat;
 
           background-position: center;
@@ -54,10 +52,11 @@
       </audio>
       <section>
         <h1>Web Browsing on the Daily</h1>
-      
           <p>
-            I don't or try not to do too much on the computer these days 
+             I don't or try not to do too much on the computer these days 
             so I can actually get work done, but here is what it looks like.
+        </p>      
+          <p
             <img
             src="desktop.png"
             width="520"
