--- a/index.html
+++ b/index.html
@@ -53,9 +53,11 @@
       <section>
         <h1>Web Browsing on the Daily</h1>
           <p>
-             I don't or try not to do too much on the computer these days 
-            so I can actually get work done, but here is what it looks like.
-        </p>      
+             I don't or try not to do too much on the computer these days
+        </p>  
+          <p>
+            but here is what it looks like.
+        </p>
           <p
             <img
             src="desktop.png"
