--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
           <nav>
               <a href="index.html"><sup>A Sample Taste</sup></a>
 
+            
               <a href="videos.html"><sub>Down the Rabbit Hole</sub></a>
 
               <a href="everyday.html"><sub>Odds and Ends</sub></a>
@@ -71,6 +72,10 @@
           <p>
             !!Gotta love the Spotify and Netflix!!
             
+          </p>
+           <p>
+             align="right"
+             I try and fiddle with sketches
           </p>
           <p>
               <iframe 
