--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
         }
         footer {
           position: fixed;
-          bottom: 0;
-        }
+          bottom: 0;        }
         audio {
           position: relative;
         }
@@ -73,7 +72,7 @@
             !!Gotta love the Spotify and Netflix!!
             
           </p>
-           <p>
+           <p
              align="right"
              I try and fiddle with sketches
           </p>
