--- a/index.html
+++ b/index.html
@@ -70,11 +70,8 @@
           <p>
             !!Gotta love the Spotify and Netflix!!
             
-          </p>
-           <p>
-              I try and fiddle with sketches
         </p>
-        <p
+        <p 
               <iframe 
                width="560" 
               height="315"
@@ -83,7 +80,9 @@
               frameborder="0" 
               autoplay
               allowfullscreen>
+        
               </iframe>
+              I try and work on sketching
           </p>
 
       </section>
