--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
             <img
 
-            src="C:\Users\break\Documents\GitHub\Data-Diary\desktop.png"
+            src="desktop.png"
 
             width="520"
 
@@ -184,16 +184,16 @@
 
       <section>
         <h4>Some of my Go-To's as of Late</h4>
-        <p><img src="C:\Users\break\Documents\GitHub\Data-Diary\dd.png" width="600"
+        <p><img src="dd.png" width="600"
         height="100" />
         </p>
-        <p><img src="C:\Users\break\Documents\GitHub\Data-Diary\kc.png"
+        <p><img src="kc.png"
         width="600"
         height="200"/></p>
-        <p><img src="C:\Users\break\Documents\GitHub\Data-Diary\yt.png"
+        <p><img src="yt.png"
         width="600"
         haight="100"/></p>
-        <p><img src="C:\Users\break\Documents\GitHub\Data-Diary\fb.png"
+        <p><img src="fb.png"
         width="200"
         height="600"/></p>
 
